# ijepa

./: .env  .gitignore  README.md  probe_results.json  pyproject.toml
src/: extract_ade20k_features.py  extract_features.py  extract_nyu_features.py  helper.py  test_classification.py  test_depth.py  test_segmentation.py  train.py  train_classification_lp.py  train_depth.py  train_heads.py  train_linear_probe.py  train_segmentation.py  train_segmentation_lp.py
src/datasets/: ade20k.py  decoders.py  extended.py  fix_imagenet.py  imagenet.py  nyu.py
src/extract_features/: nyu.py
src/models/: heads.py  linear_probing.py
src/test/: classification.py  depth.py  segmentation.py
src/train/: classification.py  depth.py  segmentation.py
src/utils/: lars.py
